First batch of restaurants

--- a/index.html
+++ b/index.html
@@ -71,6 +71,38 @@
         name: 'Šelepka',
         link: 'https://www.menicka.cz/api/iframe/?id=2721',
       },
+      {
+        name: 'Sabaidy',
+        link: 'https://www.menicka.cz/api/iframe/?id=3903',
+      },
+      {
+        name: 'Oáza',
+        link: 'https://www.menicka.cz/api/iframe/?id=4977',
+      },
+      {
+        name: 'První Doubravnická',
+        link: 'https://www.menicka.cz/api/iframe/?id=4948',
+      },
+      {
+        name: 'U Rytíře',
+        link: 'https://www.menicka.cz/api/iframe/?id=9627',
+      },
+      {
+        name: 'Pivní Opice',
+        link: 'https://www.menicka.cz/api/iframe/?id=3170',
+      },
+      {
+        name: 'Na Solnici',
+        link: 'https://www.menicka.cz/api/iframe/?id=7781',
+      },
+      {
+        name: 'Thalie',
+        link: 'https://www.menicka.cz/api/iframe/?id=6691',
+      },
+      {
+        name: 'Gopál',
+        link: 'https://www.gopal.menu/restaurant',
+      },
     ];
 
     $("body").ready(function () {
