--- a/index.html
+++ b/index.html
@@ -32,10 +32,6 @@
 
     const sites = [
       {
-        name: 'Al Capone',
-        link: 'https://www.menicka.cz/api/iframe/?id=2609',
-      },
-      {
         name: 'Bastardo',
         link: 'https://www.arabika.cz/dorucovani-jidla-a-zbozi/?filter3=brno&search=bistro-bastardo-stefanikova&filter2=restaurant',
       },
@@ -56,20 +52,8 @@
         link: 'https://www.menicka.cz/api/iframe/?id=4116',
       },
       {
-        name: 'Light of India',
-        link: 'https://www.menicka.cz/api/iframe/?id=5448',
-      },
-      {
         name: 'U Dřeváka',
         link: 'https://www.menicka.cz/api/iframe/?id=2752',
-      },
-      {
-        name: 'Montenegro pub',
-        link: 'https://www.menicka.cz/api/iframe/?id=4986',
-      },
-      {
-        name: 'Šelepka',
-        link: 'https://www.menicka.cz/api/iframe/?id=2721',
       },
       {
         name: 'Sabaidy',
@@ -102,6 +86,18 @@
       {
         name: 'Gopál',
         link: 'https://www.gopal.menu/restaurant',
+      },
+      {
+        name: 'U Semináru',
+        link: 'http://www.useminaru.cz/menu.php',
+      },
+      {
+        name: 'Lužánka',
+        link: 'https://luzankabrno.cz/poledni-menu/',
+      },
+      {
+        name: 'Teátr',
+        link: 'https://www.restaurant-teatr.cz/denni-menu.php',
       },
     ];
 
