--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     const sites = [
       {
         name: 'Home',
-        link: 'extra.html',
+        link: './extra.html',
       },
       {
         name: 'Bastardo',
