--- a/extra.html
+++ b/extra.html
@@ -9,10 +9,10 @@
   <p>Restaurants that are accessible only via URL:</p>
   <ul>
     <li>
-        <a href="https://www.gopal.menu/restaurant">Gopál</a>
+        <a href="https://www.gopal.menu/restaurant" target="_blank" rel="noopener noreferrer">Gopál</a>
     </li>
     <li>
-        <a href="http://www.useminaru.cz/menu.php">U Semináru</a>
+        <a href="http://www.useminaru.cz/menu.php" target="_blank" rel="noopener noreferrer">U Semináru</a>
     </li>
   </ul>
 </body>
