--- a/extra.html
+++ b/extra.html
@@ -15,5 +15,6 @@
         <a href="http://www.useminaru.cz/menu.php" target="_blank" rel="noopener noreferrer">U Semináru</a>
     </li>
   </ul>
+  <img src="lidicka-map-restaurants.png" alt="Lidicka Map Restaurants" style="max-width:100%;height:auto;">
 </body>
 </html>
