--- a/extra.html
+++ b/extra.html
@@ -15,6 +15,7 @@
         <a href="http://www.useminaru.cz/menu.php" target="_blank" rel="noopener noreferrer">U Semináru</a>
     </li>
   </ul>
+  <a href="https://www.google.com/maps/search/Restaurants/@49.2006673,16.6053123,16.81z/data=!4m2!2m1!6e5?entry=ttu&g_ep=EgoyMDI1MDUxNS4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener noreferrer">Google Map Restaurants</a>
   <img src="lidicka-map-restaurants.png" alt="Lidicka Map Restaurants" style="max-width:100%;height:auto;">
 </body>
 </html>
