--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
         name: 'Teátr',
         link: 'https://www.restaurant-teatr.cz/denni-menu.php',
       },   
+      {
+        name: 'Suzies',
+        link: 'https://www.menicka.cz/api/iframe/?id=3830',
+      },   
     ];
 
     $("body").ready(function () {
