--- a/extra.html
+++ b/extra.html
@@ -17,6 +17,9 @@
     <li>
         <a href="https://www.indiathali.cz/" target="_blank" rel="noopener noreferrer">Nepál India Thali</a>
     </li>
+    <li>
+        <a href="https://www.taorestaurant.cz/tydenni_menu/nabidka/" target="_blank" rel="noopener noreferrer">Tao</a>
+    </li>
   </ul>
   <a href="https://www.google.com/maps/search/Restaurants/@49.2006673,16.6053123,16.81z/data=!4m2!2m1!6e5?entry=ttu&g_ep=EgoyMDI1MDUxNS4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener noreferrer">Google Map Restaurants</a>
   <img src="lidicka-map-restaurants.png" alt="Lidicka Map Restaurants" style="max-width:100%;height:auto;">
