--- a/index.html
+++ b/index.html
@@ -36,6 +36,26 @@
         link: 'restaurant-lidicka/extra.html',
       },
       {
+        name: 'Lužánka',
+        link: 'https://luzankabrno.cz/poledni-menu/',
+      },
+      {
+        name: 'Teátr',
+        link: 'https://www.restaurant-teatr.cz/denni-menu.php',
+      },   
+      {
+        name: 'Suzies',
+        link: 'https://www.menicka.cz/api/iframe/?id=3830',
+      }, 
+      {
+        name: 'Jean Pauls',
+        link: 'https://www.menicka.cz/api/iframe/?id=3884',        
+      },
+      {
+        name: 'Sabaidy',
+        link: 'https://www.menicka.cz/api/iframe/?id=3903',
+      },
+      {
         name: 'Caruso',
         link: 'https://www.carusorestaurant.cz/denni-obedove-menu/',
       },
@@ -44,16 +64,12 @@
         link: 'https://www.menicka.cz/api/iframe/?id=4116',
       },
       {
-        name: 'Sabaidy',
-        link: 'https://www.menicka.cz/api/iframe/?id=3903',
+        name: 'První Doubravnická',
+        link: 'https://www.menicka.cz/api/iframe/?id=4948',
       },
       {
         name: 'Oáza',
         link: 'https://www.menicka.cz/api/iframe/?id=4977',
-      },
-      {
-        name: 'První Doubravnická',
-        link: 'https://www.menicka.cz/api/iframe/?id=4948',
       },
       {
         name: 'U Rytíře',
@@ -70,19 +86,7 @@
       {
         name: 'Thalie',
         link: 'https://www.menicka.cz/api/iframe/?id=6691',
-      },
-      {
-        name: 'Lužánka',
-        link: 'https://luzankabrno.cz/poledni-menu/',
-      },
-      {
-        name: 'Teátr',
-        link: 'https://www.restaurant-teatr.cz/denni-menu.php',
-      },   
-      {
-        name: 'Suzies',
-        link: 'https://www.menicka.cz/api/iframe/?id=3830',
-      },   
+      },  
     ];
 
     $("body").ready(function () {
