--- a/extra.html
+++ b/extra.html
@@ -12,6 +12,12 @@
         <a href="https://www.gopal.menu/restaurant" target="_blank" rel="noopener noreferrer">Gopál</a>
     </li>
     <li>
+      <a href="https://rebrno.cz/launchmenuCZ/White%20Black%20Simple%20Restaurant%20Menu%20(12).pdf-1724387239051.pdf" target="_blank" rel="noopener noreferrer">Re Brno</a>
+    </li>
+    <li>
+        <a href="https://www.sangiacomo.cz/en/menu" target="_blank" rel="noopener noreferrer">San Giacomo</a>
+    </li>
+    <li>
         <a href="http://www.useminaru.cz/menu.php" target="_blank" rel="noopener noreferrer">U Semináru</a>
     </li>
     <li>
